--- a/project.html
+++ b/project.html
@@ -206,7 +206,8 @@
         <marquee scrollamount="10">Thanks for visting my portfilo  </marquee>
     </header>
     <section id="home" class="hero">
-        <img src="C:\Users\H GIRI\OneDrive\Pictures\Saved Pictures\giri1.jpg">
+        <img src="https://raw.githubusercontent.com/Giri291/image/main/giri1.jpg">
+    
         <div class="hero-content">
             <h1>Hi, I'm H GIRI</h1>
             <p>Web Developer | Designer | Creator</p>
@@ -223,8 +224,7 @@
             junior College chandragiri with 60%. Schooling from Z.P. high school with 88%.
 
             Coming to my personal skills
-            I am self-motivated and a disciplined person. I'm a quick learner and fast worker. I have
-            completed my Java development course and gained certification on that. I like to travel,
+            I am self-motivated and a disciplined person. I'm a quick learner and fast worker.s I like to travel,
             I like to learn new things and also I will practice beat boxing and listening to song, I will
             feel happy and motivated too.
             That’s all about me. </p>
